--- a/static/styles/search.css
+++ b/static/styles/search.css
@@ -2,7 +2,7 @@ h1, label, body, div {
     font-family: Arial, Helvetica, sans-serif;
 }
 body, input, footer {
-    background-color: #333;
+    background-color: #34568B;
     color: #ddd;
 }
 input[type=text] {
@@ -13,7 +13,7 @@ input[type=text] {
     height: 42px;
     width: 60%;
     border: 2px #888 solid;
-    border-radius: 5px;
+    border-radius: 100px;
     font-size: 24px;
   }
 label h1 {
