adding trending and search by repo

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../static/styles/footer.css">
     <link rel="stylesheet" type="text/css" href="../static/styles/filters.css">
     <link rel="stylesheet" type="text/css" href="../static/styles/user.css">
+    <link rel="stylesheet" type="text/css" href="../static/styles/repo.css">
     <link rel="icon" href="../static/images/icon.png" />
     <title>User results</title>
   </head>
