--- a/static/styles/common.css
+++ b/static/styles/common.css
@@ -8,4 +8,9 @@ body {
 body .container {
     max-width: 1000px;
     margin: 30px auto;
+    margin-bottom: 60px;
+}
+.container .no_result {
+    text-align: center;
+    font-size: 50px;
 }
