--- a/static/styles/search.css
+++ b/static/styles/search.css
@@ -5,13 +5,14 @@ body, input, footer {
     background-color: #34568B;
     color: #ddd;
 }
-input[type=text] {
+input[type=search] {
+    text-align: center;
     background-image: url('../images/search_icon.png');
     background-size: 40px;
     background-repeat: no-repeat;
     padding-left: 40px;
     height: 42px;
-    width: 60%;
+    width: 100%;
     border: 2px #888 solid;
     border-radius: 100px;
     font-size: 24px;
@@ -29,7 +30,27 @@ label h1 {
     flex-direction: column;
     padding: 30px;
 }
+.container form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+}
+.search_submit {
+    display: none;
+}
+.search_bar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* align-self: center; */
+    vertical-align: middle;
+    flex-direction: column;
+    padding-left: 50px;
+    padding-right: 100px;
 
+    width: 100%;
+}
 footer {
     position: fixed;
     height: 60px;
