--- a/static/styles/user.css
+++ b/static/styles/user.css
@@ -1,5 +1,13 @@
-h1, label, body, div {
+h1, label, body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #00072d;
+    color: #dddddd;
+}
+a {
+    color: #d8d804;
+}
+header, footer {
+    background-color: #000000;
 }
 .container {
     display: flex;
@@ -17,17 +25,20 @@ h1, label, body, div {
     margin-bottom: 5px;
 }
 .container .user img{
-    height: 20px;
-    width: 20px;
-    background-size: 20px;
-    border-radius: 10px;
+    height: 30px;
+    width: 30px;
+    background-size: 15px;
+    border-radius: 15px;
+    border: white 1px solid;
 }
 .container .user-name {
+    position: relative;
     padding-left: 10px;
     /* color: #FFFFFF; */
-    font-size: 16px;
+    font-size: 24px;
+    bottom: 5px;
 }
-.user-description {
+.user-bio {
     font-size: 14px;
 }
 .user-languages ul{
@@ -47,17 +58,19 @@ h1, label, body, div {
     height: 10px;
     width: 10px;
     border-radius: 5px;
-    background-color: green;
+    /* background-color: green; */
     font-size: 14px;
 }
 .user-languages ul li {
     display: inline;
     /* color: #FFFFFF; */
     list-style: square;
-    box-sizing: ;
+    /* box-sizing: ; */
 
 }
-.user-description {
+.user-stats, .user-bio{
     margin: 8px 0px 4px 0px;
-    
+}
+.user-stats{
+    color: #cccccc;   
 }
