--- a/static/styles/search.css
+++ b/static/styles/search.css
@@ -2,7 +2,7 @@ h1, label, body, div {
     font-family: Arial, Helvetica, sans-serif;
 }
 body, input, footer {
-    background-color: #34568B;
+    background-color: #00072d;
     color: #ddd;
 }
 input[type=search] {
