--- a/static/styles/filters.css
+++ b/static/styles/filters.css
@@ -1,103 +1,75 @@
-.container .filters {
+.filter .elements {
+    display: flex;
+    justify-content: space-between;
+}
+.filter select {
+    background-color: #00072d;
+    color: white;
+    height: 24px;
+    width: 50%;
+    font-size: 16px;
+}
+.filter-location {
+    height: 24px;
+    width: 50%;
+
+    font-size: 16px;
+    color: white;
+    caret-color: white;
+    border: 1px #777777 solid;
+    background-color: transparent;
+}
+/* .filter .section {
+    padding: 0px 40px 0px 40px;
+} */
+.filter .section li{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+    padding-left: 0px;
+}
+/* .filter .section li input {
+
+} */
+.filter .revealed {
+    display: flex;
     position: relative;
-    background: white;
-    height: 70px;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
+    justify-content: start;
+    margin-bottom: 5px;
+    /* margin: 0px 40px 0px 40px; */
+    left: 45px;
+    width: 436.48px;
 }
-button {
-    position: absolute;
-    font-size: 18px;
-    background: #FF5A5F;
-    color: #FFFFFF;
-    height: 48px;
-    width: 20%;
-    border-style: none;
-    border-radius: 4px;
-    top: 15%;
-    right: 30px;
-}
-button:hover {
-    opacity: 0.9;
-}
-.filters div {
-    display: inline-grid;
-}
-.filters h2 {
-    margin-left: 15%;
-    margin-top: 0;
-    margin-bottom: 0;
-    font-weight: 600;
-}
-.filters h3 {
-    margin-left: 15%;
-    margin-bottom: 0;
-    font-weight: 600;
-}
-.filters h4 {
-    margin-left: 15%;
-    margin-top: 0;
-    font-weight: 400;
+.filter .revealed {
     font-size: 14px;
+    color: rgb(254, 254, 131);
 }
-.locations {
-    height: 100%;
-    width: 25%;
-    border-right: 1px solid #DDDDDD;
+.filter .section span {
+    width: 40%;
 }
-.amenities {
-    height: 100%;
-    width: 25%;
+.submit_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color: red; */
 }
-
-.popover {
-    visibility: hidden;
+.filter .section li.submit_container{
+    display: flex;
+    justify-content: center;
+    padding-left: 0px;
     width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    background: #FAFAFA;
-    padding-bottom: 15px;
-    height: 300px;
-    overflow-y: scroll;
-    scrollbar-width: none;
-    max-height: 300px;
+    margin-bottom: 0px;
+}
+button.search_submit_button {
+    margin: 2px;
+    color: white;
+    padding: 3px 5px;
+    background-color: #00072d;
+    border-radius: 5px;
+    border: 1px solid;
+    
+}
+.query:focus {
+    outline: none;
 }
 
-.popover::-webkit-scrollbar{
-    width: 0px;
-}
-
-.amenities .popover {
-    padding: 10px 0;
-    margin-left: -5px;
-    margin-top: 0%;
-}
-
-.amenities .popover ul{
-    margin: 0px;
-}
-
-.locations .popover {
-    margin-top: 0%;
-}
-.popover ul {
-    list-style-type: none;
-    padding-bottom: 10px;
-    padding-left: 10px;
-}
-.popover ul li{
-    padding: 4px;
-    padding-left: 10px;
-}
-
-.popover ul h2{
-    margin-top: 1.5%;
-    margin-bottom: 5%;
-    margin-left: 0px;
-}
-
-.amenities:hover .popover,
-.locations:hover .popover {
-    visibility: visible;
-}
