--- a/static/styles/repo.css
+++ b/static/styles/repo.css
@@ -1,7 +1,9 @@
-h1, label, body, div {
+h1, label, body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #00072d;
     color: #dddddd;
+}
+h1, body {
+background-color: #00072d;
 }
 .container {
     display: flex;
@@ -26,9 +28,6 @@ h1, label, body, div {
     border: white 1px solid;
 }
 .container .repo-name {
-    /* padding-left: 10px;
-    color: #FFFFFF;
-    font-size: 16px; */
     position: relative;
     padding-left: 10px;
     font-size: 24px;
@@ -47,16 +46,6 @@ h1, label, body, div {
     /* white-space: nowrap; */
 
 }
-/* .repo-topics li .pre_circle {
-    display: inline-block;
-    margin: 3px;
-    margin: 0px 10px;
-    height: 10px;
-    width: 10px;
-    border-radius: 5px;
-    background-color: green;
-    font-size: 14px;
-} */
 .repo-topics ul li {
     display: inline;
     /* color: #FFFFFF; */
@@ -66,4 +55,18 @@ h1, label, body, div {
 .repo-description {
     margin: 8px 0px 4px 0px;
     
+}
+.topics {
+    display: flex;
+    flex-wrap: wrap;
+}
+.topic {
+    margin: 5px;
+    padding: 0px 5px;
+    background-color: lightblue;
+    border: 1px solid;
+    border-radius: 8px;
+    color: darkblue;
+
+  
 }
