--- a/static/styles/user.css
+++ b/static/styles/user.css
@@ -1,7 +1,9 @@
 h1, label, body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #00072d;
     color: #dddddd;
+}
+h1, body {
+    background-color: #00072d;
 }
 a {
     color: #d8d804;
