--- a/templates/repo_results.html
+++ b/templates/repo_results.html
@@ -22,12 +22,26 @@
         <div class="repo-others">Language: {{repo.language}} | Forks: {{ repo.forks }} | Stars: {{ repo.stars }}</div>
       </div>
     {% endfor %}
+    <ul class="page_nav">
+      {% if p.page != 1 %}
+      <li><a href="{{ url_for('search_repos', q=p.q, language=p.language, sort_by=p.sort_by, page=1)}}">first</a></li>
+      <li><a href="{{ url_for('search_repos', q=p.q, language=p.language, sort_by=p.sort_by, page=p.page-1)}}">prev</a></li>
+      {% endif %}
+      <li><a href="" class="current_page">{{ p.page}}</a></li>
+      {% if p.page < 1000 / p.per_page and p.page < results/p.per_page %}
+      <li><a href="{{ url_for('search_repos', q=p.q, language=p.language, sort_by=p.sort_by, page=p.page+1)}}">next</a></li>
+        {% if results/p.per_page >= 1000 / p.per_page %}
+          <li><a href="{{ url_for('search_repos', q=p.q, language=p.language, sort_by=p.sort_by, page=1000 // p.per_page)}}">last</a></li>
+        {% else %}
+          <li><a href="{{ url_for('search_repos', q=p.q, language=p.language, sort_by=p.sort_by, page=results//p.per_page)}}">last</a></li>
+        {% endif %}
+      {% endif %}
+    </ul>
   {% elif results == 0 %}
-    <div class="no_result">No results found for "<small>{{ request.args.get('q') }}</small>"</div>
+    <div class="no_result">No results found for "<small>{{ p.q }}</small>"</div>
   {% else %}
   <div class="no_result">Search for Repositories</div>
   {% endif %}
-
         
 </div>
 {% endblock content %}
