--- a/templates/search.html
+++ b/templates/search.html
@@ -765,11 +765,11 @@
             <input type="search" id="filter-location" class="filter-location" name="location"
               placeholder="type location here">
           </li>
-
+          <li class="submit_container">
+            <button type="submit" value="" class="search_submit_button" placeholder="Search">search</button>
+            </li>
         </ul>
-        <div class="submit_button">
-          <button type="submit" value="" class="search_submit" placeholder="Search">submit</button>
-        </div>
+
       </div>
 
     </form>
