cleaning up, updating README, adding home page screen shot and adding more error messages

--- a/templates/401.html
+++ b/templates/401.html
@@ -24,7 +24,7 @@
       </div>
     </header>
     <div class="container">
-        <h1>422 - resource could not be reached</h1>
+        <h1>401 - Unauthorized - please check if your github access token is valid</h1>
     </div>
     <footer>
         <p>© 2023 Gitify</p>
