--- a/templates/wrong.html
+++ b/templates/wrong.html
@@ -24,7 +24,7 @@
       </div>
     </header>
     <div class="container">
-        <h1>422 - resource could not be reached</h1>
+        <h1>Sorry, something went wrong</h1>
     </div>
     <footer>
         <p>© 2023 Gitify</p>
