--- a/templates/search.html
+++ b/templates/search.html
@@ -9,11 +9,17 @@
 </head>
 
 <body>
+  <!--
+    navigations
+  -->
   <div class="nav">
     <a href="{{url_for('trending_repos')}}" class="first-nav">🔥 Trending</a>
     <a href="{{url_for('home')}}">🔎 Search</a>
   </div>
   <div class="container">
+      <!--
+        form for searching
+      -->
     <form action="{{url_for('search_redirect')}}" method="get">
       <label for="query">
         <h1>Gitify</h1>
@@ -774,6 +780,9 @@
 
     </form>
   </div>
+  <!--
+    footer
+  -->
   <footer>
     <p>© 2023 Gitify</p>
   </footer>
